update scalatest + use github/holdenk spark-testing-base library